--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ homepage = ""
 repository = "https://github.com/kevinbowen777/learning-log.git"
 documentation = "file: README.rst"
 
-keywords = ["django", "web-application", "template"]
+keywords = ["diary", "django", "web-application", "learning-log"]
 
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
@@ -99,25 +99,27 @@ gunicorn = "~=20.1.0"
 crispy-bootstrap4 = "^2022.1"
 
 [tool.poetry.group.dev.dependencies]
+django-debug-toolbar = "^4.0.0"
 pre-commit = "^3.0.0"
 black = "^23.0.0"
-django-debug-toolbar = "^4.0.0"
-coverage = {extras = ["toml"], version = "^7.0.0"}
-pytest-cov = "^4.0.0"
-pytest-django = "^4.5.2"
 django-test-plus = "^2.2.0"
+pytest = "^7.2.0"
 pytest-sugar = "^0.9.4"
 ipython = "^8.4.0"
 friendly = "^0.7.0"
 colorama = "^0.4.4"
-nox = "^2023.4.22"
+django-coverage-plugin = "^3.0.0"
+nox = "2023.4.22"
 flake8-docstrings = "^1.6.0"
 safety = "2.4.0b1"
 factory-boy = "^3.2.0"
 pip-check = "^2.7"
 pip-audit = "^2.5"
-Sphinx = "^7.0.0"
-django-coverage-plugin = "^3.0.0"
+Sphinx = "6.2.1"
+sphinx-rtd-theme = "^1.2.0"
+coverage = { version = "^7.0.0", extras = ["toml"] }
+pytest-cov = "^4.0.0"
+pytest-django = "^4.5.2"
 ruff = "^0.0.267"
 
 [tool.pytest.ini_options]
