--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ environs = { version = "^9.5.0", extras = ["django"] }
 psycopg2-binary = "^2.9.5"
 django-allauth = "^0.54.0"
 django-countries = "^7.3.2"
-Pillow = "^9.2.0"
+Pillow = "^10.0"
 gunicorn = "~=20.1.0"
 crispy-bootstrap4 = "^2022.1"
 
@@ -118,7 +118,7 @@ sphinx-rtd-theme = "^1.2.0"
 coverage = { version = "^7.0.0", extras = ["toml"] }
 pytest-cov = "^4.0.0"
 pytest-django = "^4.5.2"
-ruff = "^0.0.275"
+ruff = ">= 0.0.275, < 0.0.299"
 werkzeug = "^2.3.6"
 pyopenssl = "^23.2.0"
 
