--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,46 +1,3 @@
-[tool.black]
-line-length = 88
-# include =
-exclude = '''
-/(
-    \.git
-  | __pycache__
-  | .pytest_cache
-  | .venv
-  | staticfiles
-  | build
-  | dist
-  | ^.*\b(migrations)\b.*$
-)/
-'''
-
-[tool.coverage.paths]
-source = ["accounts", "config", "learning_logs", "pages"]
-
-[tool.coverage.run]
-branch = true
-source = ["config"]
-omit = [
-    "*conftest.py",
-    "*manage.py",
-    "*settings*.py",
-    "*test.py",
-    "*wsgi.py",
-    "*/__init__.py",
-    "*/migrations/*",
-    "*/factories.py",
-    "*/tests/*",
-]
-plugins = [
-    "django_coverage_plugin",
-]
-
-[tool.coverage.django_coverage_plugin]
-template_extensions = "html, txt, tex, email"
-
-[tool.coverage.report]
-show_missing = true
-
 [tool.poetry]
 name = "learning-log"
 version = "0.2.0"
@@ -121,6 +78,50 @@ pytest-django = "^4.5.2"
 ruff = ">= 0.0.275, < 0.0.299"
 werkzeug = "^2.3.6"
 pyopenssl = "^23.2.0"
+djlint = "^1.31.1"
+
+[tool.black]
+line-length = 88
+# include =
+exclude = '''
+/(
+    \.git
+  | __pycache__
+  | .pytest_cache
+  | .venv
+  | staticfiles
+  | build
+  | dist
+  | ^.*\b(migrations)\b.*$
+)/
+'''
+
+[tool.coverage.paths]
+source = ["accounts", "config", "learning_logs", "pages"]
+
+[tool.coverage.run]
+branch = true
+source = ["config"]
+omit = [
+    "*conftest.py",
+    "*manage.py",
+    "*settings*.py",
+    "*test.py",
+    "*wsgi.py",
+    "*/__init__.py",
+    "*/migrations/*",
+    "*/factories.py",
+    "*/tests/*",
+]
+plugins = [
+    "django_coverage_plugin",
+]
+
+[tool.coverage.django_coverage_plugin]
+template_extensions = "html, txt, tex, email"
+
+[tool.coverage.report]
+show_missing = true
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
